--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -47,6 +47,9 @@
                 </div>
                 <div class="search1">
                     <input id="myInput" type="text" placeholder="Search for doctors,hospitals and treatments">
+                    <div class="autocom-box"> 
+                        <ul></ul>
+                    </div>
                 </div> 
                 <div class="button1">
                     <button class="primary">Search</button>
@@ -359,6 +362,7 @@
                     <p>All Rights Reserved. © tvastra 2018</p>
                 </div>
         </section>
+        <script src="../scripts/suggestion.js"></script>
         <script>
             function activatePlacesSearch(){
                 var input=document.getElementById("autocomplete");
