--- a/src/client/css/index.css
+++ b/src/client/css/index.css
@@ -66,6 +66,25 @@ text-align: center;
 .container1 .search1{
 padding: .5rem 0rem;
 }
+.autocom-box{
+  background-color: var(--deep-blue);
+}
+.autocom-box li{
+  list-style-type: none;
+  color: #fff;
+  padding: 1rem;
+  text-align: left;
+  border: .5px solid white;
+  border-radius: 5px;
+  font-size: .8rem;
+  letter-spacing: .1rem;
+  cursor: pointer;
+}
+.autocom-box li:hover{
+  background-color: var(--button-blue);
+  font-size: 1rem;
+}
+
 .container1 .button1{
 position: relative;
 padding: .5rem 1.5rem;
