--- a/src/client/views/FAQ.html
+++ b/src/client/views/FAQ.html
@@ -88,12 +88,12 @@
             </div>
         </section>
         
-        <section class="container6">
-            <div class="subcontainer6">
+        <section class="container container6">
+            <div class="subcontainer">
                 <h2 class="cont6-1">Need Help?</h2>
                 <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
                 <div class="cont6-3 ">
-                    <button class="secondary ">Submit your query</button>
+                    <button class="secondary ">Submit your enquiry</button>
                 </div>
             </div>
         </section>
@@ -103,7 +103,7 @@
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
                 </a>
-            </figure>  
+            </figure> 
                 <div class="foot-list">       
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
@@ -113,7 +113,7 @@
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
-                <div class="foot-list2">
+                <div class="foot-list2 socialMedia">
                     <ul>                       
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li> <i class="fab fa-pinterest-p"></i></li>
