doctors,treat,emnts,hospitals search

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -52,7 +52,7 @@
                     </div>
                 </div> 
                 <div class="button1">
-                    <button class="primary">Search</button>
+                    <button id ="searchButton" class="primary" type="button" >Search</button>
                 </div>   
             </div>                    
         </section>
