--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -36,7 +36,7 @@
         </nav>
         <section class="tab-desktop">
             <div class="doctor-searchBox">
-                <h3> Cardiac Surgeons in <a href="">Delhi</a></h3>
+                <h3> Cardiac Surgeon in <a href="">Delhi</a></h3>
                 <div class="color">
                 </div>
             </div>
@@ -44,7 +44,8 @@
         <section class="home">
             <h6 class="heading">Home/Doctor List</h6>
             <div class="head-button">
-                <button class="doctor-button">Sort by <i class="fas fa-angle-down"></i> </button>
+                <h5>Sort by</h5>
+                <i class="fas fa-angle-down"></i> 
             </div>
         </section>
         <section class="searchBox">
@@ -638,8 +639,8 @@
                 </div>
                 <div class="mob">
                     <div class="doctors-details mob">
-                        <div class="name doc-detail1 mob" >
-                            <h4 class="mob">  NEERAJ JOSHI</h4>
+                        <div class="name doc-detail1" >
+                            <h4>  NEERAJ JOSHI</h4>
                         </div>
                         <ul class="mob">
                             <li><i class="fas fa-certificate"></i> Dentist</li>
@@ -699,7 +700,14 @@
                 </div>
             </div>
         </section>
-        <section class="container6">
+        <section class="container6-mob mob">
+                <h2 class="cont6-1">Need Help?</h2>
+                <p class="cont6-2">Just let us know. We will be happy to assist you.</p>
+                <div class="mobButton">
+                    <button class="secondary ">Submit your Query</button>
+                </div>
+        </section>
+        <section class="container container6 tab-desktop">
             <div class="subcontainer">
                 <h2 class="cont6-1">Need Help?</h2>
                 <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
@@ -708,24 +716,24 @@
                 </div>
             </div>
         </section>
-        <section class="container7">
+        <section class="footer2 mob">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
                 </a>
             </figure>  
                 <div class="foot-list">   
-                    <h1 class="mob">TVASTRA</h1>       
+                    <h2 class="mob">TVASTRA</h2>       
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
                         <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li>Other Services</a></li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
                 <div class="foot-list mob">
-                    <h1>FOLLOW US</h1>
+                    <h2>FOLLOW US</h2>
                     <ul>
                         <li>Facebook</li>
                         <li>Pinterest</li>
@@ -745,5 +753,35 @@
                     <p>All Rights Reserved. © tvastra 2018</p>
                 </div>
         </section>
+        <div class="tab-desktop">
+            <section class=" footer1">
+                <figure class="foot-image">
+                    <a href="../views/index.html">
+                    <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
+                    </a>
+                </figure> 
+                    <div class="foot-list">       
+                        <ul>                       
+                            <li><a href="doctor.html">Doctors</a></li>
+                            <li><a href="hospital.html">Hospitals</a></li>
+                            <li><a href="treatments.html">Treatment</a></li>
+                            <li>Other Services</li>
+                            <li><a href="FAQ.html">FAQs</a></li>
+                        </ul>
+                    </div> 
+                    <div class="foot-list2 socialMedia">
+                        <ul>                       
+                            <li><i class="fab fa-facebook-f"></i></li>
+                            <li> <i class="fab fa-pinterest-p"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-google-plus-g"></i></li>
+                            <li> <i class="fab fa-instagram"></i></li>
+                        </ul>
+                    </div>
+                    <div class="foot-rights">
+                        <p>All Rights Reserved. © tvastra 2018</p>
+                    </div>
+            </section>
+        </div>
     </body>
 </html>
