--- a/src/client/views/hospital.html
+++ b/src/client/views/hospital.html
@@ -388,26 +388,33 @@
                 </div>
             </div>
         </section>
-        <section class="container7">
-                <figure class="foot-image">
-                    <a href="../views/index.html">
-                    <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
-                    </a>
-                </figure> 
+        <section class="footer2 mob">
+            <figure class="foot-image">
+                <a href="../views/index.html">
+                <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
+                </a>
+            </figure>  
                 <div class="foot-list">   
-                    <h1 class="mob">TVASTRA</h1>       
+                    <h2 class="mob">TVASTRA</h2>       
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
                         <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li>Other Services</a></li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
                 <div class="foot-list mob">
-                    <h1>FOLLOW US</h1>                       
+                    <h2>FOLLOW US</h2>
+                    <ul>
+                        <li>Facebook</li>
+                        <li>Pinterest</li>
+                        <li>Twitter</li>
+                        <li>Google+</li>
+                        <li>Instagram</li>
+                    </ul>
                 </div>
-                <div class="socialMedia ">
+                <div class="socialMedia tab-desktop">
                     <i class="fab fa-facebook-f"></i>
                     <i class="fab fa-pinterest-p"></i>
                     <i class="fab fa-twitter"></i>
@@ -418,5 +425,35 @@
                     <p>All Rights Reserved. © tvastra 2018</p>
                 </div>
         </section>
+        <div class="tab-desktop">
+            <section class=" footer1">
+                <figure class="foot-image">
+                    <a href="../views/index.html">
+                    <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
+                    </a>
+                </figure> 
+                    <div class="foot-list">       
+                        <ul>                       
+                            <li><a href="doctor.html">Doctors</a></li>
+                            <li><a href="hospital.html">Hospitals</a></li>
+                            <li><a href="treatments.html">Treatment</a></li>
+                            <li>Other Services</li>
+                            <li><a href="FAQ.html">FAQs</a></li>
+                        </ul>
+                    </div> 
+                    <div class="foot-list2 socialMedia">
+                        <ul>                       
+                            <li><i class="fab fa-facebook-f"></i></li>
+                            <li> <i class="fab fa-pinterest-p"></i></li>
+                            <li><i class="fab fa-twitter"></i></li>
+                            <li><i class="fab fa-google-plus-g"></i></li>
+                            <li> <i class="fab fa-instagram"></i></li>
+                        </ul>
+                    </div>
+                    <div class="foot-rights">
+                        <p>All Rights Reserved. © tvastra 2018</p>
+                    </div>
+            </section>
+        </div>
     </body>
 </html>
