--- a/src/client/css/doctor.css
+++ b/src/client/css/doctor.css
@@ -18,10 +18,9 @@
   font-family: "Nexa-Light";
   src: url(../fonts/Nexa-Light.otf) format('truetype')
 }
-h1,h2,h4,p,li{     
-  font-family:serif;
-  font-weight: 700;
-  letter-spacing: 0.01rem;
+h1, h2, h3, h4, h5, h6, p,li {  
+  font-family: serif;
+  font-weight: 800;
 }
   .home{
       color: var(--black);
@@ -66,14 +65,14 @@ h1,h2,h4,p,li{
     text-align: center;
   }
   .doctors-list figure{
-    width: 100%;
+    height: 25rem;
     margin: 0rem;
   }
   .doctors-list figure img{
     display: block;
-  margin-left: auto;
-  margin-right: auto;
+  height: 100%;
   width: 100%;
+  object-fit: cover;
   }
   .doctors-list li{
     font-size: 1rem;
@@ -90,7 +89,7 @@ h1,h2,h4,p,li{
   content: "";
   border-top: .15rem solid var(--lt-skyblue);
   width: 1.5rem;
-  transform: translateY(.85rem);
+  transform: translateY(.4rem);
   margin-right: 7px;
   }
   .doctors-list .fas, .far{
@@ -98,11 +97,46 @@ h1,h2,h4,p,li{
     padding: 0.5rem;
     font-size: 1rem;
   }
+  .container6-mob{
+    background-color: rgb(156 207 243);;
+    text-align: center;
+    padding:2rem 0rem;
+  }
+  .container6-mob h2{
+    color: white;
+    font-weight: 600;
+    padding: .5rem;
+  }
+  .container6-mob p{
+    letter-spacing: .01rem;
+    word-spacing: .01rem;
+    padding: .5rem;
+  }
+  .mobButton{
+    padding: 1rem;
+  }
+  .container6-mob button{
+    font-weight: 100;
+    background-color: var(--sky-blue);
+    padding: 1rem;
+    border-radius: 5px;
+    font-size: 1.5rem;
+  }
 @media only screen and (min-width: 768px){ 
   
+h1, h2, h3, h4, h5, h6{  
+  font-family: Nexa-Bold;
+}
+p, li{
+  font-family: Nexa-Light;
+}
+.doctor-searchBox a{
+  border-bottom: 1px solid #000;
+  padding-bottom: 1px;
+  font-family: Nexa-Light;
+}
   .doctor-searchBox{
     position: relative;
-    font-family:Nexa-Light;
     display: flex;
     align-items: center;
     height: 250px;
@@ -122,7 +156,7 @@ h1,h2,h4,p,li{
     position: absolute;
     top: 0; }
   .doctor-searchBox h3{
-    font-family:Nexa-Light;
+    font-family: Nexa-Light;
     font-weight: 800;
     opacity: 200%;
     padding:2rem;
@@ -135,7 +169,6 @@ h1,h2,h4,p,li{
         grid-template-areas: "heading head-button";
     }
     .home h6{  
-      font-family: Nexa-Light;
       font-size: 1.2rem;
       font-weight: 200;
     }
@@ -145,16 +178,20 @@ h1,h2,h4,p,li{
       justify-self:left;
     }
     .home .head-button{
+      position: relative;
+      background-color: var(--mid-grey);
+      width: 6rem;
     }
-    .home .head-button button{
-      font-family: Nexa-Bold;
-      padding: .5rem;
-      width: auto;
-      font-size: .8rem
+    .home .head-button h5{
+      padding: .5rem 1rem;
+      font-size: .8rem;
+      text-align: left;
     }
-    .home .doctor-button .fa-angle-down{
+    .head-button .fa-angle-down{
+      position: absolute;
       font-size: 1rem;
       color:black;
+      right: .5rem;
     }
     .searchBox{
       display: grid;
@@ -163,6 +200,7 @@ h1,h2,h4,p,li{
     }
     .filterHead{
       background-color: var(--mid-grey);
+      padding: .5rem;
     }
     .filterHead h5{
       padding: .2rem 1rem;
@@ -180,10 +218,11 @@ h1,h2,h4,p,li{
       padding: 1rem 0rem;
     }
     .criteriaHead h3{
-      font-family: Nexa-Light;
       font-size: 1rem;
       line-height: 1.2rem;
-      padding-left: 1rem;
+      padding: .5rem 1rem 0rem 1rem;
+      font-family: 'Nexa-Light';
+      font-weight: 100;
     }
     .criteriaHead .fa-search{
       position: absolute;
@@ -231,9 +270,6 @@ h1,h2,h4,p,li{
       display: grid;
       grid-template-columns: repeat(3, 1fr);
       grid-template-rows: repeat(5,44px);    
-    }
-    .doctors-details h4{
-      font-family: Nexa-Bold;
     }
     .doc-detail1{
       grid-column:1/3 ;
@@ -287,10 +323,11 @@ h1,h2,h4,p,li{
       transform: translateY(-50%);
     }
     .doc-detail2 p{
-      padding: .5rem 1rem .5rem 2rem;
-      font-family: "Nexa-Light";
+      padding: 0rem 0rem 0rem 2rem;
       font-size: .8rem;
       vertical-align: middle;
+      font-weight: 100;
+      text-shadow: none;      
     }
     .doc-detail3{
       grid-column:1/3 ;
@@ -326,7 +363,6 @@ h1,h2,h4,p,li{
       padding-left: 1.5rem;
       }
     .doctors-list li{
-      font-family: "Nexa-Light";
       font-size: .8rem;
       font-weight: 500;
       letter-spacing: .08rem;
@@ -339,15 +375,15 @@ h1,h2,h4,p,li{
     }
     .name{
     display: flex;
-    color:var(--sky-blue);
+    color:var(--button-blue);
     padding: 0rem 0rem;
     }
     .name::before{
     display: block;
     content: "";
-    border-top: .15rem solid var(--lt-skyblue);
+    border-top: .1rem solid var(--button-blue);
     width: 1.5rem;
-    transform: translateY(.85rem);
+    transform: translateY(.65rem);
     margin-right: 7px;
     }
 }
@@ -357,7 +393,6 @@ h1,h2,h4,p,li{
     padding:5rem;
   }
   .doctor-searchBox a{
-    text-decoration: underline;
     font-family: Nexa-Bold;
   }
     .home{
@@ -380,7 +415,6 @@ h1,h2,h4,p,li{
       color: var(--dark-blue);
     }
     .appliedFilters{
-      font-family: Nexa-Light;
       font-size: .7rem;
       font-weight: bold;
       letter-spacing: .01rem;
@@ -394,6 +428,7 @@ h1,h2,h4,p,li{
       padding: .5rem 1.5rem .5rem 1rem;
       border: 1px solid var(--mid-grey);
       border-radius: 25px;
+      font-family: 'Nexa-Light';
     }    
     .selectedFilters .fas{
       position: absolute;
@@ -407,10 +442,9 @@ h1,h2,h4,p,li{
       position: relative;
       display: grid;
       grid-template-columns: 5fr 1fr 1fr;
-      padding: 2rem 0rem;
+      padding: 1rem 0rem;
     }
     .criteriaHead h3{
-      font-family: Nexa-Light;
       font-size: 1rem;
       line-height: 1.2rem;
       padding-left: 1rem;
@@ -466,16 +500,15 @@ h1,h2,h4,p,li{
       margin-bottom: 1rem;
       display: grid;
       grid-template-columns: repeat(3, 1fr);
-      grid-template-rows: repeat(3,9fr);    
+      grid-template-rows: repeat(3,85px);    
     }
     .doctors-details h4{
-      font-family: Nexa-Bold;
       font-size: 1.4rem;
     }
     .doc-detail1{
       grid-column:1/3 ;
       grid-row: 1/2;
-      padding: 1rem;
+      padding: 0rem;
       align-self: center;
     }
     .doc-detail2{
@@ -522,7 +555,10 @@ h1,h2,h4,p,li{
     .doctors-list .appoinment-button{
       padding:2rem;
     }
+    .doctors-list figure {
+    height: 255px;
+    }
     .doctors-list figure img{
-    height: 317px;
+      height: 100%;
     }
 }
