--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -334,7 +334,7 @@
                 </div>
             </div>
         </section>
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
@@ -344,8 +344,8 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li>Other Services</li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
