--- a/src/client/views/aboutUs.html
+++ b/src/client/views/aboutUs.html
@@ -74,44 +74,48 @@
         </section>
 
         <section class="container2">
-            <div class="container2-sub">
-                <h3 class="containerHeading">
-                    Your wellness builds upon the medical daily
-                </h3>  
-                <div class="containerPara">         
-                    <p>
-                        Find your best self here. Discover new ways to live an inspiring life through natural beauty, nutrition and diet, an active lifestyle, and better relationships.
-                    </p>
-                </div> 
-                <div class="checkupButton">
-                    <button class="secondary">Get a Free Checkup</button>
+
+            <video class="desktop"  src="https://workspace.konfinity.com/swapnil/tvastra-wiki/-/wikis/uploads/e06d816e6aca8019010592c7780543a4/The+New+Stamford+Hospital+TV+Commercial.mp4"></video>
+            <div class="contentOverVideo">
+                <div class="container2-sub">
+                    <h3 class="containerHeading">
+                        Your wellness builds upon the medical daily
+                    </h3>  
+                    <div class="containerPara">         
+                        <p>
+                            Find your best self here. Discover new ways to live an inspiring life through natural beauty, nutrition and diet, an active lifestyle, and better relationships.
+                        </p>
+                    </div> 
+                    <div class="checkupButton">
+                        <button class="secondary">Get a Free Checkup</button>
+                    </div>
                 </div>
-            </div>
-            <div class="stats">
-                <div class="statItem">
-                    <h3>12M</h3>
-                    <p>Happy Patients</p>
-                </div>
-                <div class="statItem">
-                    <h3>5K</h3>
-                    <p>Medical Assistants</p>
-                </div>
-                <div class="statItem">
-                    <h3>9.8</h3>
-                    <p>Alexa Score</p>
-                </div>
-                <div class="statItem">
-                    <h3>3.8k</h3>
-                    <p>Doctors Available</p>
-                </div>
-                <div class="statItem">
-                    <h3>45k</h3>
-                    <p>Cure Rate</p>
-                </div>
-                <div class="statItem">
-                    <h3>75</h3>
-                    <p>Health POints</p>
-                </div>
+                <div class="stats">
+                    <div class="statItem">
+                        <h3>12M</h3>
+                        <p>Happy Patients</p>
+                    </div>
+                    <div class="statItem">
+                        <h3>5K</h3>
+                        <p>Medical Assistants</p>
+                    </div>
+                    <div class="statItem">
+                        <h3>9.8</h3>
+                        <p>Alexa Score</p>
+                    </div>
+                    <div class="statItem">
+                        <h3>3.8k</h3>
+                        <p>Doctors Available</p>
+                    </div>
+                    <div class="statItem">
+                        <h3>45k</h3>
+                        <p>Cure Rate</p>
+                    </div>
+                    <div class="statItem">
+                        <h3>75</h3>
+                        <p>Health POints</p>
+                    </div>
+                </div>                
             </div>
         </section>
         
@@ -125,7 +129,7 @@
             </div>
         </section>
 
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
@@ -135,12 +139,12 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
-                <div class="foot-list2">
+                <div class="foot-list2 socialMedia">
                     <ul>                       
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li> <i class="fab fa-pinterest-p"></i></li>
