--- a/src/client/views/appoinment.html
+++ b/src/client/views/appoinment.html
@@ -37,11 +37,11 @@
         <section class="container">
             <h4>Book an Appoinment</h4>
             <div class="appoinmentContainer">
-                <div class="dateSection subcontainer">
+                <div class="dateSection subcont">
                     <h5>Select Appoinment Date*</h5>
                     <input type="text" placeholder="dd/mm/yyyy">
                 </div>
-                <div class="timeSection subcontainer">
+                <div class="timeSection subcont">
                     <h5>Time Intervel*</h5>
                     <div class="radio">
                         <input type="radio"><label for="">Morning</label>                       
@@ -53,7 +53,7 @@
                         <input type="radio"><label for="">Evening</label>                       
                     </div>
                 </div>
-                <div class="urgencySection subcontainer">
+                <div class="urgencySection subcont">
                     <h5>Appoinment Status/Urgency*</h5>
                     <div class="radio">
                         <input type="radio"><label for="">Routine check-up</label>                       
@@ -68,17 +68,17 @@
                         <input type="radio"><label for="">Surgical Appoinment</label>                       
                     </div>    
                 </div>
-                <div class="uploadSection subcontainer">
+                <div class="uploadSection subcont">
                     <h5>Upload Previous Health Record*</h5>  
                     <form action="/action_page.php">
                         <input type="file" id="myFile" name="filename">
                       </form>
                 </div>
-                <div class="detailsSection subcontainer">
+                <div class="detailsSection subcont">
                     <h5>Appoinment Details</h5>   
                     <input type="text"> 
                 </div>
-                <div class="buttonSection subcontainer">
+                <div class="buttonSection subcont">
                     <button class="primary">Book Appoinment</button>
                     <i class="fas fa-arrow-right"></i>    
                 </div>
