--- a/src/client/views/query.html
+++ b/src/client/views/query.html
@@ -52,7 +52,7 @@
                     </div>
                 </div>
             </div>
-            <div class="foot-rights">
+            <div class="foot-rightsQuery">
                 <p class="copyright">All Rights Reserved &copy; Tvastra 2020</p>
             </div>
         </section>
