--- a/src/client/css/aboutApollo.css
+++ b/src/client/css/aboutApollo.css
@@ -32,7 +32,7 @@
   .mainContainer{
     padding: 1rem;
   }
-  .subContainer{
+  .subContainerAbtApollo{
     border:1px solid var(--mid-grey);
     padding-bottom: 1rem;
   }
@@ -131,7 +131,7 @@
     .mainContainer{
       padding: 2rem;
     }
-    .subContainer{
+    .subContainerAbtApollo{
       display: grid;
       grid-template-columns: 7fr 4fr;
       grid-template-rows: 1fr;
@@ -145,6 +145,7 @@
     }
     .aboutHospitalSection{
       grid-row: 1/2;
+      padding: 1rem;
     }
     .Summary{    
       padding:  0rem;
@@ -155,20 +156,21 @@
     .hospitalLoc{
       display: grid;
       grid-template-columns: 1fr 1fr;
-      padding: 0rem 1rem 2rem 1rem;
+      padding: 0rem 1rem 2rem 0rem;
     }
     .name{
       padding: 1.5rem 0rem 1.5rem 1rem;
     }
     .name::before {
       content: '';
-      border-bottom: 2px solid var(--button-blue);
-      display: inline-block;
-      width: .75rem;
-      margin: 0rem;
-      position: absolute;
-      bottom: 50%;
-      left: 0rem;
+    border-bottom: .1px solid var(--button-blue);
+    display: inline-block;
+    width: 2rem;
+    margin: 0rem;
+    margin-left: -1rem;
+    position: absolute;
+    bottom: 50%;
+    left: 0rem;
   }
   .addressAndBed{
     grid-gap: .5rem;
@@ -212,7 +214,7 @@
     .mainContainer{
       padding: 3rem 5rem;
     }
-    .subContainer {
+    .subContainerAbtApollo {
       display: grid;
       grid-template-columns: 8fr 2.5fr;
       grid-template-rows: 1fr;
@@ -260,67 +262,4 @@
 }
 .specializationHeading {
   grid-template-columns: 3% 94% 3%;
-}
-    .container6{
-      background-color: var(--lt-skyblue);
-      text-align: center;
-      color: white;
-      padding: 0rem;
-    }
-    .subcontainer6{
-      padding: 3rem 5rem;
-      display: grid;
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
-    }
-    .container6 h2{
-      font-family: Nexa-Bold;
-      padding: 0rem;
-      padding-bottom: .5rem;
-    }
-    .container6 p{
-      font-family: Nexa-Light;
-      color:var(--dark-blue);
-      padding: 0rem;
-      padding-top: 1rem;
-    }
-    .cont6-1{
-    grid-column:1/2 ;
-    grid-row: 1/2;
-    justify-self: flex-start;
-    align-self: flex-end;
-    }
-    .cont6-2{
-      grid-column:1/2 ;
-      grid-row: 2/3;
-      justify-self: flex-start;
-    }
-    .cont6-3{
-      grid-column:2/3 ;
-      grid-row: 1/3;
-      justify-self: flex-end;align-self: center;
-      padding: 0rem;
-    }
-    .container6 button{
-      padding:1rem;
-      border-radius: 5px;
-      background-color:var(--button-blue);
-      font-size: 1rem;
-    }
-    .container7{
-    background-color: white;
-    padding: 1rem 5rem;
-    }
-    .foot-image{
-      width: 40%;
-    }
-    .foot-rights{
-      text-align: left;
-    }
-    .foot-rights p{
-      font-size: 1rem;
-    }
-    .foot-list a{
-      font-size: 1rem;
-    }
-  }
+}}
