--- a/src/client/css/signup.css
+++ b/src/client/css/signup.css
@@ -23,22 +23,25 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+  .container{
+    background-color: var(--lt-skyblue);
+    padding: 2rem 1rem;
+  }
   .signUpBox{  
     background-color: white;
-    margin: 3rem 0rem;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
   .signUpBoxhead{
       text-align: center;
-      color: var(--sky-blue);
+      color: var(--button-blue);
       padding: 2rem 1rem;
-      border-bottom: solid 1px var(--light-gray);
+      border-bottom: solid 1px var(--mid-grey);
   }
   .inputContainer{
     padding: 1rem;
     display: flex;
     flex-wrap: wrap;
-    grid-gap: .5rem;
+    grid-gap: 1rem;
   }
   .mobNumInput{
       position: relative;
@@ -71,14 +74,18 @@
         transform: translateY(-70%);
         color: white;
     }
-  .inputContainer input, .inputContainer select{
-      border: solid 1px var(--light-gray);
-      height: 35px;
-  }
+    .input-box{
+      width: 100%;
+    }
   ::placeholder,select{
-    color:var(--mid-grey);
+    color:#35353559;
     font-weight: bolder;
     font-family: Nexa-Bold;
+    text-indent: 10px;
+  }
+  .inputContainer input, .inputContainer select{
+      border: solid 1px #e0e0e0;
+      height: 35px;
   }
   .subInput{
     width: 48%;
@@ -94,15 +101,16 @@
     color: var(--grey);
   }
   .redirect a{
-      color: var(--sky-blue);
+      color: var(--button-blue);
   }
-  .foot-rights{
+  .rights{
       text-align: center;
+      padding: 2rem 1rem ;
+      padding-bottom: 0rem;
   }
-  .foot-rights p{
+  .rights p{
       font-family: Nexa-Bold;
     font-size: .8rem;
-    padding:1rem;
   }
   @media only screen and (min-width: 768px){  
     
@@ -124,7 +132,7 @@
       transform: translate(50%,-50%);
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     }
-    .foot-rights{
+    .rights{
       position: absolute;
       bottom: 3%;
       left: 50%;
