--- a/src/client/css/treatments.css
+++ b/src/client/css/treatments.css
@@ -57,6 +57,7 @@
 }
   .aboutDentist li{
       padding-bottom: 1rem;
+      font-size: .8rem;
   }
   .dentistFigure{
     width: 100%;
@@ -77,8 +78,10 @@
   .visitation p{
       font-size: .7rem;
   }
-  .visitationDetails{
-      padding-bottom: 1rem;
+  .visitationDetails h5{
+      padding: 1rem;
+  }.visitationDetails{
+    padding:1rem;
   }
   .serviceDetails{
       border:2px solid var(--mid-grey);
@@ -120,7 +123,7 @@
       font-size: .8rem;
   }
   .moreServices{
-      background-color: var(--light-blue);
+      background-color: var(--deep-blue);
       padding: 1rem;
   }
   .moreServiceHead{
