--- a/src/client/views/FAQ.html
+++ b/src/client/views/FAQ.html
@@ -88,6 +88,7 @@
             </div>
         </section>
         
+        
         <section class="container container6">
             <div class="subcontainer">
                 <h2 class="cont6-1">Need Help?</h2>
@@ -97,8 +98,7 @@
                 </div>
             </div>
         </section>
-
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
@@ -108,8 +108,8 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li>Other Services</li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
