--- a/src/client/views/contact.html
+++ b/src/client/views/contact.html
@@ -41,7 +41,7 @@
         </section>
 
         <section class="mapImage">
-
+            <div class="map" id="map"></div>
         </section>
 
         <section class="contactSection">
@@ -73,22 +73,22 @@
             </div>
         </section>
         
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
                 </a>
-            </figure>  
+            </figure> 
                 <div class="foot-list">       
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li>Other Services</li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
-                <div class="foot-list2">
+                <div class="foot-list2 socialMedia">
                     <ul>                       
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li> <i class="fab fa-pinterest-p"></i></li>
@@ -101,5 +101,8 @@
                     <p>All Rights Reserved. © tvastra 2018</p>
                 </div>
         </section>
-    </body>
+        <script src="../scripts/map.js"></script>
+    
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDipoKXR0jrMeoCg-K7DyVqWblRwsv-LPw&callback=myMap"></script>
+        </body>
 </html>
