--- a/src/client/views/doctor's-profile.html
+++ b/src/client/views/doctor's-profile.html
@@ -41,7 +41,7 @@
         </section>
 
         <section class="mainContainer">
-            <div class="subContainer">
+            <div class="subContainerDocProf">
                 <div class="imgSection">
                     <figure class="docfigure">
                         <img class="docImg" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/image--005.jpg" alt="">
@@ -113,17 +113,17 @@
             </div>
         </section>
         
-        <section class="container6">
-            <div class="subcontainer6">
+        <section class="container container6">
+            <div class="subcontainer">
                 <h2 class="cont6-1">Need Help?</h2>
                 <p class="cont6-2">Just let us know, we will be happy to assist you.</p>
                 <div class="cont6-3 ">
-                    <button class="secondary ">Submit your query</button>
+                    <button class="secondary ">Submit your enquiry</button>
                 </div>
             </div>
         </section>
 
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
@@ -133,12 +133,12 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
-                <div class="foot-list2">
+                <div class="foot-list2 socialMedia">
                     <ul>                       
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li> <i class="fab fa-pinterest-p"></i></li>
