--- a/src/client/views/treatments.html
+++ b/src/client/views/treatments.html
@@ -156,7 +156,7 @@
             </div>
         </section>
 
-        <section class="container7">
+        <section class="footer1">
             <figure class="foot-image">
                 <a href="../views/index.html">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
@@ -166,12 +166,12 @@
                     <ul>                       
                         <li><a href="doctor.html">Doctors</a></li>
                         <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li><a href="treatments.html">Treatment</a></li>
+                        <li>Other Services</li>
                         <li><a href="FAQ.html">FAQs</a></li>
                     </ul>
                 </div> 
-                <div class="foot-list2">
+                <div class="foot-list2 socialMedia">
                     <ul>                       
                         <li><i class="fab fa-facebook-f"></i></li>
                         <li> <i class="fab fa-pinterest-p"></i></li>
