lohin signup limks

--- a/src/client/views/doctor.html
+++ b/src/client/views/doctor.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -783,5 +783,6 @@
                     </div>
             </section>
         </div>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
