--- a/src/client/views/treatments.html
+++ b/src/client/views/treatments.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -184,5 +184,6 @@
                     <p>All Rights Reserved. © tvastra 2018</p>
                 </div>
         </section>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
