--- a/src/client/views/appoinment.html
+++ b/src/client/views/appoinment.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -87,5 +87,6 @@
                 <p class="copyright">All Rights Reserved &copy; Tvastra 2020</p>
             </div>
         </section>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
