--- a/src/client/views/contact.html
+++ b/src/client/views/contact.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -104,5 +104,7 @@
         <script src="../scripts/map.js"></script>
     
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDipoKXR0jrMeoCg-K7DyVqWblRwsv-LPw&callback=myMap"></script>
-        </body>
+        
+        <script src="../scripts/navigation.js"></script>
+    </body>
 </html>
