--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -363,6 +363,7 @@
                 </div>
         </section>
         <script src="../scripts/suggestion.js"></script>
+        <script src="../scripts/navigation.js"></script>
         <script>
             function activatePlacesSearch(){
                 var input=document.getElementById("autocomplete");
