--- a/src/client/views/login.html
+++ b/src/client/views/login.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -51,12 +51,13 @@
                     </div>
                 </div>
                 <div class="redirect">
-                    <p >Not Registered?<a href="/signup">&nbsp;Sign Up</a> </p>
+                    <p >Not Registered?<a href="signup.html">&nbsp;Sign Up</a> </p>
                 </div>
             </div>
             <div class="foot-rights">
                 <p class="copyright">All Rights Reserved &copy; Tvastra 2020</p>
             </div>
         </section>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
