--- a/src/client/views/signup.html
+++ b/src/client/views/signup.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -68,12 +68,13 @@
                     </div>
                 </div>
                 <div class="redirect">
-                    <p >Already Registered?<a href="/login">&nbsp;Login</a> </p>
+                    <p >Already Registered?<a href="login.html">&nbsp;Login</a> </p>
                 </div>
             </div>
             <div class="rights">
                 <p class="copyright">All Rights Reserved &copy; Tvastra 2020</p>
             </div>
         </section>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
