--- a/src/client/views/tvastraPlus.html
+++ b/src/client/views/tvastraPlus.html
@@ -25,7 +25,7 @@
                     </ul>
             </div>
             <div class="navButtons desktop">
-                        <button class="third navButton1">
+                        <button class="third navButton1 loginDirect">
                             Login/Signup
                         </button>
                         <button class="primary navButton2">                        
@@ -475,5 +475,6 @@
         </section>
             
         </section>
+        <script src="../scripts/navigation.js"></script>
     </body>
 </html>
