--- a/src/client/views/partials/footer.ejs
+++ b/src/client/views/partials/footer.ejs
@@ -12,7 +12,7 @@
     <body>
         <section class="footer1">
             <figure class="foot-image">
-                <a href="index">
+                <a href="/">
                 <img class="footer-image" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" alt="">
                 </a>
             </figure> 
