--- a/src/client/views/partials/header.ejs
+++ b/src/client/views/partials/header.ejs
@@ -11,7 +11,7 @@
     <body>
         <nav class="top-nav">
             <div class="nav-logo">
-                <a href="./index.html">
+                <a href="/">
                     <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
                 </a>
             </div>
