--- a/src/client/views/partials/header.ejs
+++ b/src/client/views/partials/header.ejs
@@ -31,6 +31,7 @@
                         <button class="primary navButton2">                        
                             Get a Quote
                         </button>
+                        <a href="/logout">Logout</a>
             </div>
             <i class="fas fa-bars mob-tab"></i>
         </nav>
