--- a/src/client/views/index.ejs
+++ b/src/client/views/index.ejs
@@ -9,31 +9,7 @@
         <link rel="stylesheet" href="../css/common.css">             
     </head>
     <body>
-        <nav class="top-nav">
-            <div class="nav-logo">
-                <a href="./index.html">
-                <img class="logo-tvastra" src="https://s3.ap-south-1.amazonaws.com/appdev.konfinity.com/css/tasks/footer.png" >
-                </a>
-            </div>
-            <div class="desktop-nav desktop">          
-                    <ul>                            
-                        <li><a href="doctor.html">Doctors</a></li>
-                        <li><a href="hospital.html">Hospitals</a></li>
-                        <li><a href="treatments.html">Treatments</a></li>
-                        <li>Other Services</li>
-                        <li><a href="aboutUs.html">About</a></li>
-                    </ul>
-            </div>
-            <div class="navButtons desktop">
-                        <button class="third navButton1 loginDirect" onclick="location.href='/login'">
-                            Login/Signup
-                        </button>
-                        <button class="primary navButton2">                        
-                            Get a Quote
-                        </button>
-            </div>
-            <i class="fas fa-bars mob-tab"></i>
-        </nav>
+        <%- include ('partials/header.ejs') %>
         <section class="container container1">
             <h1>Find Affordable Healthcare</h1>
             <p >
