--- a/src/client/views/login.ejs
+++ b/src/client/views/login.ejs
@@ -14,18 +14,20 @@
         <section class="container">
             <div class="loginBox">
                 <div class="loginBoxhead">
-                    <h4>Login</h4>
+                    <h4>Email Login</h4>
                 </div>
-                <div class="inputContainer">
-                    <div class="mobNumInput">
-                        <input type="tel" name="mobileNumber" placeholder="Enter Mobile Number">
-                        <i class="fas fa-question-circle"></i>
-                    </div>
-                    <input type="text" placeholder="Enter OTP">
-                    <div class="loginButton">
-                        <button class="primary" type="submit">LOGIN</button>
-                        <i class="fas fa-arrow-right"></i>                        
-                    </div>
+                <form action="/login" method="post">
+                    <div class="inputContainer">
+                        <div class="emailInput">
+                            <input type="email" name="email" placeholder="Enter Email Address">
+                            <i class="fas fa-question-circle"></i>
+                        </div>
+                        <input type="password" name="password" placeholder="Enter password">
+                        <div class="loginButton">
+                            <button class="primary" type="submit">LOGIN</button>
+                            <i class="fas fa-arrow-right"></i>                        
+                        </div>
+                </form>
                 </div>
                 <div class="redirect">
                     <p >Not Registered?<a href="signup">&nbsp;Sign Up</a> </p>
