--- a/src/client/css/common.css
+++ b/src/client/css/common.css
@@ -36,6 +36,20 @@
       align-self: center;
       justify-self: flex-end;
     }
+    .name{
+    display: flex;
+    color:var(--sky-blue);
+    font-family: 'nexa-bold';
+    padding: 1rem 0rem;
+    }
+    .name::before{
+    display: block;
+    content: "";
+    border-top: .13rem solid var(--lt-skyblue);
+    width: 1.5rem;
+    transform: translateY(.5rem);
+    margin-right: 7px;
+    }
     .container6{
       background-color: var(--lt-skyblue);
       text-align: center;
